meta keywords, login <main>

--- a/ONtime/public_html/customerservice.html
+++ b/ONtime/public_html/customerservice.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
     <title>Watch us ONtime</title>
     <meta name="description" content="ONtime - Top Seller & Best Quality Services on watches">
-    <meta name="keywords" content="Watches, Buying, Selling, Discount, Offer, Fix, Maintenance, New Arrivals, Fossil, Tag Heuer">
+    <meta name="keywords" content="Watches, Watch, Strap, Minute, Second, Buying, Selling, Discount, Offer, Fix, Maintenance, New Arrivals, Gshock, Fossil, Tag Heuer">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/customerservice.css" rel="stylesheet" type="text/css" />
@@ -15,7 +13,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </head>
-
 <body>
     <section>
         <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -202,5 +199,4 @@
         </section>
     </section>
 </body>
-
 </html>
