--- a/ONtime/public_html/login.html
+++ b/ONtime/public_html/login.html
@@ -5,7 +5,7 @@
     <title>Watch us ONtime</title>
     <meta name="description" content="ONtime - Top Seller & Best Quality Services on watches">
     <meta name="keywords"
-        content="Watches, Buying, Selling, Discount, Offer, Fix, Maintenance, New Arrivals, Fossil, Tag Heuer">
+        content="Watches, Watch, Strap, Minute, Second, Buying, Selling, Discount, Offer, Fix, Maintenance, New Arrivals, Gshock, Fossil, Tag Heuer">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/login.css" rel="stylesheet" type="text/css">
@@ -16,50 +16,57 @@
 </head>
 
 <body>
-    <div class=container>
-        <div class="row">
-            <div class="col-md-6">
-                <div class="login-form">
-                    <form name="Login" action="index.html" method="post" onsubmit="return validateform()">
-                        <h2 class="text-center">Log in</h2>
-                        <div class="form-group">
-                            <input type="text" class="form-control" name="Username" placeholder="Username" required pattern="[0-9a-zA-Z_.-]*">
-                        </div>
-                        <div class="form-group">
-                            <input type="password" class="form-control" name="Password" placeholder="Password" required pattern="[0-9a-zA-Z_.-]*">
-                        </div>
-                        <div class="form-group">
-                            <button type="submit" class="btn btn-primary btn-block">Log in</button>
-                        </div>
-                        <div class="clearfix">
-                            <label class="pull-left checkbox-inline"><input type="checkbox">
-                                Remember me</label>
-                            <a href="#" class="pull-right">Forgot Password?</a>
-                        </div>
-                    </form>
+    <main>
+        <div class=container>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="login-form">
+                        <form name="Login" action="index.html" method="post" onsubmit="return validateform()">
+                            <h2 class="text-center">Log in</h2>
+                            <div class="form-group">
+                                <input type="text" class="form-control" name="Username" placeholder="Username" required
+                                    pattern="[0-9a-zA-Z_.-]*">
+                            </div>
+                            <div class="form-group">
+                                <input type="password" class="form-control" name="Password" placeholder="Password"
+                                    required pattern="[0-9a-zA-Z_.-]*">
+                            </div>
+                            <div class="form-group">
+                                <button type="submit" class="btn btn-primary btn-block">Log in</button>
+                            </div>
+                            <div class="clearfix">
+                                <label class="pull-left checkbox-inline"><input type="checkbox">
+                                    Remember me</label>
+                                <a href="#" class="pull-right">Forgot Password?</a>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-6">
-                <div class="login-form">
-                    <form name="CreateAcc" action="index.html" method="post" onsubmit="return validateform()">
-                        <h2 class="text-center">Create An Account</h2>
-                        <div class="form-group">
-                            <input type="text" class="form-control" name="CreateUsername" placeholder="Username" required pattern="[0-9a-zA-Z_.-]*">
-                        </div>
-                        <div class="form-group">
-                            <input type="password" class="form-control" name="CreatePassword" placeholder="Password" required pattern="[0-9a-zA-Z_.-]*">
-                        </div>
-                        <div class="form-group">
-                            <input type="password" class="form-control" name="CfmPassword" placeholder="Confirm Password" required pattern="[0-9a-zA-Z_.-]*">
-                        </div>
-                        <div class="form-group">
-                            <button type="submit" class="btn btn-primary btn-block">Create Account</button>
-                        </div>
-                    </form>
+                <div class="col-md-6">
+                    <div class="login-form">
+                        <form name="CreateAcc" action="index.html" method="post" onsubmit="return validateform()">
+                            <h2 class="text-center">Create An Account</h2>
+                            <div class="form-group">
+                                <input type="text" class="form-control" name="CreateUsername" placeholder="Username"
+                                    required pattern="[0-9a-zA-Z_.-]*">
+                            </div>
+                            <div class="form-group">
+                                <input type="password" class="form-control" name="CreatePassword" placeholder="Password"
+                                    required pattern="[0-9a-zA-Z_.-]*">
+                            </div>
+                            <div class="form-group">
+                                <input type="password" class="form-control" name="CfmPassword"
+                                    placeholder="Confirm Password" required pattern="[0-9a-zA-Z_.-]*">
+                            </div>
+                            <div class="form-group">
+                                <button type="submit" class="btn btn-primary btn-block">Create Account</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    </main>
 </body>
 
 </html>
