completed the checkout page and shopping cart - didn't do the validation though...

--- a/ONtime/public_html/aboutus.html
+++ b/ONtime/public_html/aboutus.html
@@ -75,11 +75,11 @@ and open the template in the editor.
     </article>
 
     <section class="row" id="ourteam">
-        <!--add little arrows to the popup?-->
         <h1>Our Team</h1>
         <p>Our current team consists of 4 highly motivated watch makers.
             If you'd like to know more about our members, click on the respective picture.</p>
-        <div id="yeesiang" class="thumbnail col-md-3" data-toggle="collapse" data-target="#yeesiangstext" data-parent="#ourteam">
+        <div id="yeesiang" class="thumbnail col-md-3 col-sm-6" data-toggle="collapse" data-target="#yeesiangstext"
+            data-parent="#ourteam">
             <h2>Yee Siang</h2>
             <img class="img-circle img-responsive" src="images/logo_bg.png" alt="Yee Siang">
             <figure id="yeesiangstext" class="popup collapse">
@@ -89,7 +89,8 @@ and open the template in the editor.
             </figure>
         </div>
 
-        <div id="aaron" class="thumbnail col-md-3" data-toggle="collapse" data-target="#aaronstext" data-parent="#ourteam">
+        <div id="aaron" class="thumbnail col-md-3 col-sm-6" data-toggle="collapse" data-target="#aaronstext"
+            data-parent="#ourteam">
             <h2>Aaron</h2>
             <img class="img-circle img-responsive" src="images/logo_bg.png" alt="Aaron">
             <figure id="aaronstext" class="popup collapse">
@@ -104,7 +105,8 @@ and open the template in the editor.
             </figure>
         </div>
 
-        <div id="daniel" class="thumbnail col-md-3" data-toggle="collapse" data-target="#danielstext" data-parent="#ourteam">
+        <div id="daniel" class="thumbnail col-md-3 col-sm-6" data-toggle="collapse" data-target="#danielstext"
+            data-parent="#ourteam">
             <h2>Daniel</h2>
             <img class="img-circle img-responsive" src="images/logo_bg.png" alt="Daniel">
             <figure id="danielstext" class="popup collapse">
@@ -120,7 +122,8 @@ and open the template in the editor.
             </figure>
         </div>
 
-        <div id="nikola" class="thumbnail col-md-3" data-toggle="collapse" data-target="#nikostext" data-parent="#ourteam">
+        <div id="nikola" class="thumbnail col-md-3 col-sm-6" data-toggle="collapse" data-target="#nikostext"
+            data-parent="#ourteam">
             <h2>Nikola</h2>
             <img class="img-circle img-responsive" src="images/logo_bg.png" alt="Nikola">
             <figure id="nikostext" class="popup collapse">
