--- a/ONtime/public_html/checkout.html
+++ b/ONtime/public_html/checkout.html
@@ -13,15 +13,46 @@
 <!--summary of your purchase-->
 
 <body class="container">
-    <h1>Thank you for your purchase at ONtime.</h1>
-    <p>You will receive further updates via email.</p>
-    <p>We'd like to provide the best service to you. Feel free to <a href="customerservice.html">contact us</a></p>
-    <button>
+    <header class="page-header">
+        <h1>Thank you for your purchase at ONtime.</h1>
+    </header>
+
+    <p>You will receive further updates regarding your order via email.</p>
+    <p>We'd like to provide the best service to you. Feel free to <a href="customerservice.html">contact us</a>
+        if you have any questions.</p>
+
+    <h2>Your order at a glance</h2>
+    <table class="table table-striped table-responsive">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Quantity</th>
+                <th>Price</th>
+            </tr>
+        </thead>
+        <tr>
+            <td><a href="ProductDetails.html" target="_blank">Watch1</a></td>
+            <td>1</td>
+            <td>40 SGD</td>
+        </tr>
+        <tr>
+            <td><a href="ProductDetails.html" target="_blank">Watch2</a></td>
+            <td>2</td>
+            <td>80 SGD</td>
+        </tr>
+        <tfoot>
+            <tr class="tfooter">
+                <td></td>
+                <td id="pricetotal">Price total: </td>
+                <td id="amounttotal">120 SGD</td>
+            </tr>
+        </tfoot>
+    </table>
+    <button type="button" class="btn btn-info btn-sm">
         <a href="index.html">
             Back to the main page
         </a>
     </button>
-    
 </body>
 
 </html>
