--- a/ONtime/public_html/shoppingcart.html
+++ b/ONtime/public_html/shoppingcart.html
@@ -13,13 +13,13 @@
 </head>
 
 <body class="container">
-    <header>
+    <header class="page-header">
         <h1>Your shopping cart at ONtime</h1>
     </header>
-    <div class="row">
+    <section class="row">
         <div class="col-md-12">
             <h2>Your Shopping Cart contains:</h2>
-            <table class="table table-responsive">
+            <table class="table table-striped table-responsive">
                 <thead>
                     <tr>
                         <th>Name</th>
@@ -32,67 +32,97 @@
                 <tr>
                     <td><a href="ProductDetails.html" target="_blank">Watch1</a></td>
                     <td>1</td>
-                    <td>40SGD</td>
-                    <td>40SGD</td>
-                    <td><button>Remove</button></td>
+                    <td>40 SGD</td>
+                    <td>40 SGD</td>
+                    <td><button type="button" class="btn btn-danger btn-sm">Remove</button></td>
+                    <!--will remove one item from the shopping cart-->
                 </tr>
                 <tr>
                     <td><a href="ProductDetails.html" target="_blank">Watch2</a></td>
                     <td>2</td>
-                    <td>40SGD</td>
-                    <td>80SGD</td>
-                    <td><button>Remove</button></td>
+                    <td>40 SGD</td>
+                    <td>80 SGD</td>
+                    <td><button type="button" class="btn btn-danger btn-sm">Remove</button></td>
+                    <!--will remove one item from the shopping cart-->
                 </tr>
+                <tfoot>
+                        <tr class="tfooter">
+                            <td></td>
+                            <td></td>
+                            <td id="pricetotal">Price total: </td>
+                            <td id="amounttotal">120 SGD</td>
+                            <td></td>
+                        </tr>
+                    </tfoot>
             </table>
         </div>
-    </div>
+    </section>
 
-    <div class="row">
-        <div class="col-md-6">
-            <h2>Delivery Address</h2>
-            <form>
-                Full name:<br>
-                <input type="text" name="name"><br>
-                Street:<br>
-                <input type="text" name="street"><br>
-                Country Code:<br>
-                <input type="text" name="countrycode"><br>
-                Country:<br>
-                <input type="text" name="country"><br>
-                Phone Number:<br>
-                <input type="tel" name="phonenumber"><br>
-                Email Address:<br>
-                <input type="email" name="email"><br>
+    <section class="well well-sm row">
+        <h2>Delivery Address</h2>
+        <form id="deliveryinfo">
+            <section class="form-group row">
+                <div class="col-sm-4">
+                    <label for="ex1">Full Name</label>
+                    <input class="form-control" id="ex1" type="text">
+                </div>
+                <div class="col-sm-4">
+                    <label for="ex2">Email Address</label>
+                    <input class="form-control" id="ex2" type="text">
+                </div>
+                <div class="col-sm-4">
+                    <label for="ex3">Phone number</label>
+                    <input class="form-control" id="ex3" type="text">
+                </div>
+            </section>
+            <section class="form-group row">
+                <div class="col-sm-4">
+                    <label for="ex1">Street</label>
+                    <input class="form-control" id="ex4" type="text">
+                </div>
+                <div class="col-sm-4">
+                    <label for="ex2">Country Code</label>
+                    <input class="form-control" id="ex5" type="text">
+                </div>
+                <div class="col-sm-4">
+                    <label for="ex3">Country</label>
+                    <input class="form-control" id="ex6" type="text">
+                </div>
+            </section>
+        </form>
+
+        <h2>Select Payment Type</h2>
+        <form id="selectpaymenttype">
+            <input type="radio" name="payment-type" value="Cash" checked> Cash (Note: Cash must have the exact
+            change!)<br>
+            <input type="radio" name="payment-type" value="Credit/DebitCard"> Credit/Debit Card<br>
+            <form id="billinginfo">
+                <section class="form-group row">
+                    <div class="col-sm-4">
+                        <label for="ex1">Name on Card</label>
+                        <input class="form-control" id="ex1" type="text">
+                    </div>
+                    <div class="col-sm-4">
+                        <label for="ex2">Card Number</label>
+                        <input class="form-control" id="ex2" type="text">
+                    </div>
+                    <div class="col-sm-2">
+                        <label for="ex3">Expiry Data</label>
+                        <input class="form-control" id="ex3" type="text">
+                    </div>
+                    <div class="col-sm-2">
+                        <label for="ex4">cvv</label>
+                        <input class="form-control" id="ex4" type="text">
+                    </div>
+                </section>
             </form>
-        </div>
+        </form>
+    </section>
 
-        <div class="col-mg-6">
-            <h2>Select Payment Type</h2>
-            <form id="selectpaymenttype">
-                <input type="radio" name="payment-type" value="Cash" data-toggle="collapse"
-                    data-target="#infocash" data-parent="#selectpaymenttype" checked> Cash<br>
-
-                <p class="collapse" id="infocash">Note: Cash must be exact!</p>
-
-
-                <input type="radio" name="payment-type" value="Credit/DebitCard" data-toggle="collapse"
-                    data-target="#bill" data-parent="#selectpaymenttype"> Credit/Debit Card<br>
-
-                <form class="collapse" id="bill">
-                    Name on Card:<br>
-                    <input type="text" name="nameoncard"><br>
-                    Credit Card Number:<br>
-                    <input type="text" name="cardnumber"><br>
-                    Expiry Date:<br>
-                    <input type="text" name="expdate"><br>
-                    cvv:<br>
-                    <input type="text" name="cvv"><br>
-                </form>
-            </form>
-        </div>
-    </div>
-    <div id="checkoutbtn" class="row">
-        <button><a href="checkout.html">Purchase</a></button>
+    <div id="checkoutbutton" class="row">
+        <button type="button" class="btn btn-success btn-lg">
+            <a href="checkout.html">Purchase <span class="glyphicon glyphicon-arrow-right"></span></a>
+        </button>
     </div>
 
 
