--- a/ONtime/public_html/index.html
+++ b/ONtime/public_html/index.html
@@ -31,10 +31,6 @@ and open the template in the editor.
         }
     </style>
 
-
-
-
-
 </head>
 
 <body>
@@ -196,65 +192,34 @@ and open the template in the editor.
         </div>
     </div>
 
-
-    <footer class="page-footer font-small blue pt-4">
-
-        <!-- Footer Links -->
-        <div class="container-fluid text-center text-md-left">
-
-            <!-- Grid row -->
-            <div class="row">
-
-                <!-- Grid column -->
-                <div class="col-md-6 mt-md-0 mt-3">
-
-                    <!-- Content -->
-                    <h5 class="text-uppercase">Footer Content</h5>
-                    <p>Here you can use rows and columns to organize your footer content.</p>
-
+    <footer class = "footer">
+        <div class =container>
+            <div class = "row">
+                <div class = "col-md-4">
+                    <h1>Company</h1>
+                    <a href=""><p>About Us</p></a>
+                    <a href=""><p>Contact Us</p></a>
                 </div>
-
-
-                <!-- Grid column -->
-                <div class="col-md-2 mb-md-0 mb-2">
-
-                    <!-- Links -->
-                    <h5 class="text-uppercase">Links</h5>
-
-                    <ul class="list-unstyled">
-                        <li>
-                            <a href="#!" class="icon-container">
-                                <div class="img-zoom imghover"><img class="icon" src="images/ficon.png"></div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#!">
-                                <div class="img-zoom imghover"><img class="icon" src="images/ticon.png"></div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#!">
-                                <div class="img-zoom imghover"><img class="icon" src="images/iicon.png"></div>
-                            </a>
-                        </li>
-                    </ul>
-
-                </div>
-                <!-- Grid column -->
-
+                                        
+                <div class = "col-md-4">
+                    <h1>Customer Support</h1>
+                    <a href="customerservice.html#FAQ"><p>FAQ</p></a>   
+                    <a href=""><p>Customer Service</p></a>
+                    </div>
+                <div class = "col-md-4">
+                    <div class = "col-md-4">
+                        <h1>Follow Us On</h1>
+                        <a href="https://www.facebook.com/"><p><i class="fa fa-facebook-official"></i> Facebook</p></a>
+                        <a href="https://www.youtube.com/"><p><i class="fa fa-youtube-play"></i> Youtube</p></a>
+                        <a href="https://www.linkedin.com/"><p><i class="fa fa-linkedin"></i> LinkedIn</p></a>
+                        <a href="https://twitter.com/"><p><i class="fa fa-twitter"></i> Twitter</p></a>
+                    </div>          
+                </div>                                          
             </div>
-            <!-- Grid row -->
-
-        </div>
-        <!-- Footer Links -->
-
-        <!-- Copyright -->
-        <div class="footer-copyright text-center py-3">&copy 2019 Copyright: ONtime.com
-        </div>
-        <!-- Copyright -->
-
-    </footer>
-
+            <hr/>
+            <p class="copyright">Copyright &copy; 2019 <i class="fa fa-heart-o"></i> ONTime</p>
+        </div>    
+    </footer>                     
 </body>
 
 </html>
