--- a/ONtime/public_html/productsreview.html
+++ b/ONtime/public_html/productsreview.html
@@ -29,6 +29,26 @@ and open the template in the editor.
                 <h1>Reviews</h1>
                 <p class ="text-center">We value every comments you provide!</p>
 
+                <div class="container" id="CustomerReviews">
+                    <!--Responsive Form CSS - https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_responsive_form -->
+                    <form action="">
+                        <h1>Customer Review</h1>
+
+                        <div class="row">
+                            <div class="col-25">
+                                <label for="question">Question</label>
+                            </div>
+                            <div class="col-75">
+                                <textarea id="question" name="question" placeholder="Write your question.."
+                                    style="height:200px"></textarea>
+                            </div>
+                            </div>
+                            <div class="row">
+                                <input type="submit" value="Submit">
+                            </div>
+                        </form>
+                        <!--Responsive Form CSS - https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_responsive_form -->
+
                 <section class= "row">
                     <section class= "col-md-4 text-center">
                         <figure class="profile">
@@ -39,7 +59,7 @@ and open the template in the editor.
                                 <span class="fa fa-star" data-rating="2"></span>
                                 <span class="fa fa-star" data-rating="3"></span>
                                 <span class="fa fa-star" data-rating="4"></span>
-                                <span class="fa fa-star-o" data-rating="5"></span>
+                                <span class="fa fa-star-o" data-rating="5"></span> 
                             </figure> 
                             <h2>Aaron <span>Co-Founder of OnTime </span></h2>
                         </figure>
