--- a/ONtime/public_html/shoppingcart.html
+++ b/ONtime/public_html/shoppingcart.html
@@ -14,7 +14,7 @@
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
         crossorigin="anonymous"></script>
-    <script src="js/shoppingcartcheck.js"></script>
+    <script defer src="public_html\js\shoppingcartcheck.js"></script>
 </head>
 
 <body class="container">
