--- a/ONtime/public_html/products.html
+++ b/ONtime/public_html/products.html
@@ -627,7 +627,7 @@ and open the template in the editor.
         <hr />
     </main>
 
-    <article class="footer">
+    <footer class="footer">
         <section class=container>
             <section class="row">
                 <!--<section class = "col-md-3">
@@ -683,7 +683,7 @@ and open the template in the editor.
             <hr />
             <p class="copyright">Copyright &copy; 2019 <i class="fa fa-heart-o"></i> ONTime</p>
         </section>
-    </article>
+    </footer>
 
 </body>
 
