still not perfect js validation

--- a/ONtime/public_html/shoppingcart.html
+++ b/ONtime/public_html/shoppingcart.html
@@ -14,7 +14,7 @@
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
         crossorigin="anonymous"></script>
-    <script defer src="public_html\js\shoppingcartcheck.js"></script>
+    <script defer src="js\shoppingcartcheck.js"></script>
 </head>
 
 <body class="container">
@@ -135,10 +135,10 @@
         </form>
 
         <h2>Select Payment Type</h2>
-        <form id="selectpaymenttype">
+        <form>
             <input type="radio" name="payment-type" value="Cash" checked> Cash (Note: Cash must have the exact
             change!)<br>
-            <input id="cashradio" type="radio" name="payment-type" value="Credit/DebitCard"> Credit/Debit Card<br>
+            <input  id="cashradio"type="radio" name="payment-type" value="Credit/DebitCard"> Credit/Debit Card
             <form id="billinginfo">
                 <section class="form-group row">
                     <div class="col-sm-4">
