--- a/ONtime/public_html/aboutus.html
+++ b/ONtime/public_html/aboutus.html
@@ -163,34 +163,49 @@ and open the template in the editor.
         </div>
     </article>
 
-    <footer class = "footer">
-        <div class =container>
-            <div class = "row">
-                <div class = "col-md-4">
+    <footer class="footer">
+        <section class=container>
+            <section class="row">               
+                <section class="col-md-4">
                     <h1>Company</h1>
                     <p>About Us</p>
                     <p>Contact Us</p>
-                </div>
-                
-                <div class = "col-md-4">
+                </section>
+
+                <section class="col-md-4">
                     <h1>Customer Support</h1>
-                    <a href="customerservice.html#FAQ"><p>FAQ</p></a>
-                    <a href=""><p>Contact Us</p></a>
-                    <a href=""><p>Customer Service</p></a>
-                </div>
-                
-                <div class = "col-md-4">
+                    <a href="">
+                        <p>FAQ</p>
+                    </a>
+                    <a href="">
+                        <p>Contact Us</p>
+                    </a>
+                    <a href="">
+                        <p>Customer Service</p>
+                    </a>
+                </section>
+
+                <section class="col-md-4">
                     <h1>Follow Us On</h1>
-                    <a href="https://www.facebook.com/"><p><i class="fa fa-facebook-official"></i> Facebook</p></a>
-                    <a href="https://www.youtube.com/"><p><i class="fa fa-youtube-play"></i> Youtube</p></a>
-                    <a href="https://www.linkedin.com/"><p><i class="fa fa-linkedin"></i> LinkedIn</p></a>
-                    <a href="https://twitter.com/"><p><i class="fa fa-twitter"></i> Twitter</p></a>
-                </div>
+                    <a href="https://www.facebook.com/">
+                        <p><i class="fa fa-facebook-official"></i> Facebook</p>
+                    </a>
+                    <a href="https://www.youtube.com/">
+                        <p><i class="fa fa-youtube-play"></i> Youtube</p>
+                    </a>
+                    <a href="https://www.linkedin.com/">
+                        <p><i class="fa fa-linkedin"></i> LinkedIn</p>
+                    </a>
+                    <a href="https://twitter.com/">
+                        <p><i class="fa fa-twitter"></i> Twitter</p>
+                    </a>
+                </section>
+
             </section>
-            <hr/>
+            <hr />
             <p class="copyright">Copyright &copy; 2019 <i class="fa fa-heart-o"></i> ONTime</p>
-        </div>    
-    </footer>   
+        </section>
+    </footer>
 </body>
 
 </html>
