--- a/ONtime/public_html/shoppingcart.html
+++ b/ONtime/public_html/shoppingcart.html
@@ -9,6 +9,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/shoppingcart.css">
+    <link rel="stylesheet" href="css/headerFooter.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"
         crossorigin="anonymous"></script>
@@ -167,6 +169,7 @@
             <a id="checkbutton" href="checkout.html">Purchase <span class="glyphicon glyphicon-arrow-right"></span></a>
         </button>
     </div>
+
 
 
 </body>
