--- a/ONtime/public_html/ProductDetails.html
+++ b/ONtime/public_html/ProductDetails.html
@@ -11,6 +11,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="css/Products.css" type="text/css"/>
+        <link rel="stylesheet" href="css/headerFooter.css">
         <script
             src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
         </script>
